listo el crud basico

--- a/views/products.pug
+++ b/views/products.pug
@@ -9,11 +9,11 @@ block content
     .container(style='flex: 1; padding: 50px 0;' )
         .columns.is-multiline  
             each product in products    
-                .column.is-half
+                .column.is-4
                     .card   
                         .card-image
                             figure.image(style="height: 190px")
-                                img(src=product.image style="height: 100%; object-fit: cover")
+                                img(src=product.image style="height:100%; object-fit: cover")
                         .card-content
                             h1.title= product.name
                             .button.is-fullwidth.is-primary
